Fixed alignment of "Accept" and "Decline" buttons on various devices

--- a/app/pages/_pages.scss
+++ b/app/pages/_pages.scss
@@ -29,9 +29,9 @@
   flex: 0 0 auto;
   padding: 5px 10px;
   margin: auto 8px auto 12px;
-@media (max-width: $screen-sm-max) {
-  margin: auto 12px 12px auto;
-}
+  @media (max-width: $screen-xs-max) {
+    margin: auto 12px 12px auto;
+  }
 }
 
 .cookie-decline-button {
@@ -45,11 +45,16 @@
   flex: 0 0 auto;
   padding: 5px 10px;
   margin: auto 12px auto auto;
-  @media (max-width: $screen-sm-max) {
-    margin: auto auto 12px 12px;
+  @media (max-width: $screen-xs-max) {
+    margin: auto auto 12px 20px;
   }
 }
 
+.cookieConsent {
+  @media (min-width: $screen-sm-min) {
+    flex-wrap: nowrap!important;
+  }
+}
 // Fontsize classes, applied when changing the fontsize.
 
 .__font-size-small {
